--- a/assets/sass/pages/_splash.scss
+++ b/assets/sass/pages/_splash.scss
@@ -7,7 +7,7 @@
 			font-weight: bold;
 			text-transform: uppercase;
 			color: $red;
-			margin: grid(2) 0 grid(4);
+			margin: grid(6) 0 grid(4);
 		}
 
 		@include media-md {
